# rumil

./: .a.env.template  .b.env.template  .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  .sops.yaml  Brewfile  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  apply_migration.py  backfill_summaries.py  experiment_summarise.py  experiment_summarise2.py  experiment_summarise3.py  justfile  main.py  migrate_local_to_prod.py  migrate_sqlite.py  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/agents/: rumil-explorer.md  rumil-researcher.md
.claude/docs/: NEXT_STEPS.md
.claude/skills/: write-tests.md
.github/workflows/: ci.yml
deploy/: Dockerfile.api  Dockerfile.frontend  README.md
deploy/chart/: Chart.yaml  secrets.enc.yaml  secrets.yaml.template  values.yaml
deploy/infra/: create-cluster.sh  install-platform.sh  rumil-ci-rbac.yaml  setup-vertex-ai.sh
docs/: importance-systems-divergence.md  view-pages-design.md
examples/inlays/: forecast-card.html
frontend/: .env.example  .env.local.example  .env.template  eslint.config.mjs  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  pnpm-lock.yaml
frontend/scripts/: with-env-overrides.sh
frontend/src/: api-config.ts  middleware.ts
parma/: NOTES.md  import_from_rumil.py  next.config.ts  openapi-ts.config.ts  package.json  pnpm-lock.yaml  serve.py  tsconfig.json
parma/orchestrator/: __init__.py  prioritizer.py  tools.py  tracing.py
prompts/: ab-eval-comparison.md  ab-eval-consistency.md  ab-eval-dimension.md  ab-eval-final-report.md  ab-eval-general-quality.md  ab-eval-grounding.md  ab-eval-research-progress.md  ab-eval-subquestion-relevance.md  adversarial_review_synthesizer.md  api_chat.md  assess.md  assess_concept.md  big_assess.md  build_model.md  citations.md  claim_investigation_p1.md  claim_investigation_p2.md  create_view.md  critique_artefact.md  cross-cutting-analysis.md  cross-cutting-propagation.md  draft_artifact.md  eval-falsifiable-grounding.md  eval-feedback.md  evaluate.md  explore_tension.md  feedback-plan-updates.md  find_considerations.md  find_considerations_source_first.md  flag_issue_addendum.md  generate_artefact.md  generate_spec.md  generate_spec_extra_loose.md  generate_spec_loose.md  generate_spec_tight.md  global_prio.md  global_prio_create.md  global_prio_decide.md  global_prio_explore.md  grounding-feedback.md  (+74 more)
public-ui/: NOTES.md  OPERATOR-UI.md  ORCHESTRATOR.md  STREAMING.md  VIEW-MODES.md  _mock_data.py  import_from_rumil.py  package.json  pnpm-lock.yaml  serve.py
public-ui/orchestrator/: __init__.py  context.py  prioritizer.py  run_types.py  runner.py  tools.py
public-ui/specs/: chat-trace-instrumentation.md  concept-hover-ui.md  cross-check-run-type.md  embedding-search-tool.md  judgement-supersession.md  link-visualization.md  multi-step-loop.md  source-ingestion.md  suggestion-execution.md  web-research-tool.md
scripts/: ab_branch.sh  backfill_prompt_versions.py  backfill_summaries.py  backfill_summary_embeddings.py  create_cli_service_account.py  create_inlay.py  deploy.sh  dev-api.sh  exchange_forks.py  generate-api-types.sh  grant_admin.py  nudge.py  remote_run.sh  run_adversarial_review_smoke.py  run_call.py  run_context_eval.py  run_deep_research.py  run_generative.py  run_prio.py  run_view_essay.py  run_view_essay_batch.py  set-secret.sh  sync-prod-env.sh  test_cache.py
src/: calls.py  chat.py  context.py  database.py  executor.py  llm.py  mapper.py  orchestrator.py  summary.py  workspace_map.py
src/differential/: broadcast.py  chat.py  context.py  database.py  executor.py  llm.py  mapper.py  models.py  orchestrator.py  parser.py  pricing.json  pricing.py  settings.py  summary.py  trace_events.py  tracer.py  workspace_map.py
src/rumil/: available_calls.py  available_moves.py  budget.py  cascades.py  chat.py  cli_client.py  constants.py  context.py  database.py  deep_research.py  descriptions.py  dispatch.py  embeddings.py  events.py  (+38 more)
supabase/: .gitignore  config.toml
tests/: conftest.py  test_ab_eval.py  test_ab_eval_by_prompt.py  test_adversarial_review.py  test_adversarial_review_gate.py  test_adversarial_review_mechanics.py  test_adversarial_review_wiring.py  test_adversarial_verdicts_api.py  test_agent_loop.py  test_alerts.py  test_annotation_events.py  test_annotations_batch.py  test_api.py  test_atlas_descriptions.py  test_available_calls_presets.py  test_axon_orchestrator.py  test_axon_unit.py  test_big_assess_context.py  test_breadth_vs_depth.py  test_budget_pacing.py  test_build_model.py  test_call_lifecycle.py  test_call_sequences.py  test_cascade_orchestrator.py  test_cascades.py  test_chat_branch_endpoint.py  test_chat_get_view.py  test_chat_new_tools.py  test_chat_persistence.py  test_chat_resilience.py  test_chat_store.py  test_chat_stream_shield.py  test_cites_links.py  test_cli_client.py  test_context_eval_diff.py  test_context_eval_registry.py  test_continuation_recovery.py  test_create_call.py  test_create_claim_inline_links.py  test_create_project_endpoint.py  (+195 more)
versus/: .gitignore  AGENT.md  CLAUDE.md  config.example.yaml  config.yaml  pyproject.toml
versus/scripts/: analyze.py  backfill_db.py  backfill_human_baselines.py  backfill_judge_config.py  build_self_vs_human_html.py  fetch_essays.py  rerun_orch_closer.py  run_completions.py  run_judgments.py  run_paraphrases.py  run_rumil_judgments.py  serve_ui.py  status.py
versus/src/versus/: _langfuse.py  analyze.py  anthropic_client.py  complete.py  config.py  diagnostics.py  envcascade.py  essay.py  fetch.py  jsonl.py  judge.py  judge_config.py  mainline.py  model_config.py  openrouter.py  paraphrase.py  prepare.py  rumil_completion.py  rumil_judge.py  run_summary.py  ui.py  validate_essay.py  versions.py  versus_config.py  versus_db.py  view.py
versus/src/versus/sources/: __init__.py  _html_common.py  carlsmith.py  forethought.py  redwood.py
versus/src/versus/tasks/: __init__.py  base.py  complete_essay.py  judge_pair.py
versus/src/versus/templates/: _base.html  done.html  index.html  inspect.html  judge.html  results.html
(+854 files in other folders)
