[project]
name = "rumil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "fastapi>=0.135.1",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "supabase>=2.0.0",
    "uvicorn[standard]>=0.41.0",
    "voyageai>=0.3.2",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
pdf = [
    "pypdf>=6.7.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rumil"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "pytest>=8.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.25.0",
    "pyright>=1.1.408",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
