[project]
name = "rumil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.84.0",
    "fastapi>=0.135.1",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "supabase>=2.0.0",
    "uvicorn[standard]>=0.41.0",
    "claude-agent-sdk>=0.1.66",
    "tenacity>=9.0.0",
    "google-genai>=1.72",
    "versus",
    "pyjwt[crypto]>=2.11.0",
    "langfuse>=4.5.1",
    "kubernetes>=33.0.0",
]

[project.optional-dependencies]
pdf = [
    "pypdf>=6.7.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rumil"]

[tool.uv.sources]
versus = { path = "versus", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "pytest>=8.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.25.0",
    "pytest-xdist>=3.6",
    "pyright>=1.1.408",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-n auto --dist worksteal"

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["frontend", "supabase", "data", "versus"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line length handled by formatter, not lint
    "E741",   # ambiguous single-letter names (l, I, O) used deliberately in comprehensions
    "B008",   # function-call-in-default — FastAPI Depends() pattern
    "B905",   # zip(..., strict=) — opt-in per call site, not universally appropriate
    "RUF001", # ambiguous unicode in strings (intentional em-dashes, smart quotes)
    "RUF002", # ambiguous unicode in docstrings
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]  # sys.path mutation precedes imports intentionally

[tool.pyright]
include = ["src", "tests", "scripts"]
exclude = ["frontend", "supabase", "data", "**/__pycache__"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
